--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,16 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.8</version>
         </dependency>
-       
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>       
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
